@@ -1,6 +1,7 @@
 v1.5.1 (WIP)
 - Store TextView buffer as [][]byte instead of []string
 - Add TextView.SetBytes and TextView.GetBytes
+- Add TableCell.SetBytes, TableCell.GetBytes and TableCell.GetText
 - Allow modification of scroll bar render text
 - Optimize TextView (writing is 90% faster, drawing is 50% faster)
 
